--- a/nbs/05TFRecord.ipynb
+++ b/nbs/05TFRecord.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,40 +17,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#|hide\n",
-    "from nbdev.showdoc import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From d:\\git\\flood_exercise\\.venv\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "#|export\n",
-    "import tensorflow as tf\n",
-    "import rasterio\n",
-    "import numpy as np"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Step 3 - Create a TFRecord file\n",
     "In this step you need to convert the original dataset (with the splits) into a TFRecord format, which is documented here:\n",
     "https://www.tensorflow.org/tutorials/load_data/tfrecord \n",
     "\n",
@@ -64,7 +34,226 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|hide\n",
+    "from nbdev.showdoc import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|export\n",
+    "import tensorflow as tf\n",
+    "import rasterio\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "from flood_exercise import utils_func as util\n",
+    "from flood_exercise import const_vals as CONST"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# playing\n",
+    "src = rasterio.open(r'D:\\git\\flood_exercise\\S2\\Bolivia_23014_S2Hand.tif')\n",
+    "bands = src.descriptions\n",
+    "arr = src.read()\n",
+    "\n",
+    "df = pd.DataFrame(arr.reshape([arr.shape[0],-1]).T)\n",
+    "df.columns = bands"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "B1_list = tf.train.FloatList(value=df['B1'].tolist())\n",
+    "B1_vals = tf.train.Feature(float_list=B1_list)\n",
+    "# B1_names = tf.train.Feature(bytes_list=B1_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "B1_vals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# movie_name_list = tf.train.BytesList(value=['The Shawshank Redemption', 'Fight Club'])\n",
+    "movie_rating_list = tf.train.FloatList(value=df['B1'].tolist())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movie_ratings = tf.train.Feature(float_list=movie_rating_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movie_ratings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import tensorflow as tf\n",
+    "import numpy as np\n",
+    "import rasterio\n",
+    "\n",
+    "def _bytes_feature(value):\n",
+    "    return tf.train.Feature(bytes_list=tf.train.BytesList(value=[value]))\n",
+    "\n",
+    "def _int64_feature(value):\n",
+    "    return tf.train.Feature(int64_list=tf.train.Int64List(value=value.flatten()))\n",
+    "\n",
+    "def read_geotiff(file_path):\n",
+    "    with rasterio.open(file_path) as src:\n",
+    "        return src.read()\n",
+    "\n",
+    "def convert_to_tfrecord(image_dir, output_file):\n",
+    "    writer = tf.io.TFRecordWriter(output_file)\n",
+    "    image_files = os.listdir(image_dir)\n",
+    "\n",
+    "\n",
+    "    for img_file, label_file in image_files:\n",
+    "        img_path = os.path.join(image_dir, img_file)\n",
+    "\n",
+    "\n",
+    "        image = read_geotiff(img_path)  \n",
+    "\n",
+    "        image_bytes = image.tobytes()\n",
+    "\n",
+    "\n",
+    "        example = tf.train.Example(features=tf.train.Features(feature={\n",
+    "            'image': _bytes_feature(image_bytes),\n",
+    "        }))\n",
+    "\n",
+    "        writer.write(example.SerializeToString())\n",
+    "\n",
+    "    writer.close()\n",
+    "\n",
+    "# Example usage:\n",
+    "image_dir = r'D:\\git\\flood_exercise\\S2\\Bolivia_23014_S2Hand.tif'\n",
+    "output_file = 'dataset.tfrecord'\n",
+    "\n",
+    "convert_to_tfrecord(image_dir,output_file)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " image_files = os.listdir(\"D:\\git\\flood_exercise\\S2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "paths = util.load_list_paths(path = r'D:\\git\\flood_exercise\\S2', filter_file =True)\n",
+    "\n",
+    "src = rasterio.open(paths[15])\n",
+    "arr = src.read(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _bytes_feature(value):\n",
+    "    return tf.train.Feature(bytes_list=tf.train.BytesList(value=[value]))\n",
+    "\n",
+    "def _int64_feature(value):\n",
+    "    return tf.train.Feature(int64_list=tf.train.Int64List(value=value.flatten()))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr_bytes = arr.tobytes()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "example = tf.train.Example(features=tf.train.Features(feature={\n",
+    "            'image': _bytes_feature(arr_bytes),\n",
+    "        }))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,20 +281,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<_MapDataset element_spec={'B1': TensorSpec(shape=(1,), dtype=tf.float32, name=None), 'B10': TensorSpec(shape=(1,), dtype=tf.float32, name=None), 'B11': TensorSpec(shape=(1,), dtype=tf.float32, name=None), 'B12': TensorSpec(shape=(1,), dtype=tf.float32, name=None), 'B2': TensorSpec(shape=(1,), dtype=tf.float32, name=None), 'B3': TensorSpec(shape=(1,), dtype=tf.float32, name=None), 'B4': TensorSpec(shape=(1,), dtype=tf.float32, name=None), 'B5': TensorSpec(shape=(1,), dtype=tf.float32, name=None), 'B6': TensorSpec(shape=(1,), dtype=tf.float32, name=None), 'B7': TensorSpec(shape=(1,), dtype=tf.float32, name=None), 'B8': TensorSpec(shape=(1,), dtype=tf.float32, name=None), 'B8A': TensorSpec(shape=(1,), dtype=tf.float32, name=None), 'B9': TensorSpec(shape=(1,), dtype=tf.float32, name=None)}>"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "parsedDataset"
    ]
