trf class convertor - work in progress

--- a/nbs/01CONSTANTS.ipynb
+++ b/nbs/01CONSTANTS.ipynb
@@ -60,12 +60,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|export\n",
+    "# task 3 constants\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "#|export\n",
-    "# task 2 constants\n",
+    "# task 4 constants\n",
     "GREEN_BAND =3\n",
     "NIR_BAND = 8\n",
     "\n",
