--- a/nbs/05TFRecord.ipynb
+++ b/nbs/05TFRecord.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|export\n",
+    "\n",
+    "\n",
+    "class ConvertTRF():\n",
+    "\n",
+    "\n",
+    "  def __init__(self,\n",
+    "    path_to_tif : str , #path to GeoTIFF files\n",
+    "    path_save_trf : str , # path to the folder that will store the result trf Records files\n",
+    "    ):\n",
+    "\n",
+    "    self.list_of_tif = util.load_list_paths(path = path_to_tif , filter_file = False)\n",
+    "\n",
+    "\n",
+    "\n",
+    "  def _convert_img_to_feature_(self, \n",
+    "                               path_to_img : str , #path to specific image\n",
+    "                               ):\n",
+    "    with rasterio.open(path_to_img) as src:\n",
+    "\n",
+    "      bands = src.descriptions\n",
+    "      arr = src.read()\n",
+    "\n",
+    "      # convert to dataframe in order to convert later to feature #TODO - MAKE IT OWKRS WITH NUMPY ARRAY\n",
+    "      df = pd.DataFrame(arr.reshape([arr.shape[0],-1]).T)\n",
+    "      df.columns = bands\n",
+    "      \n",
+    "      \n",
+    "\n",
+    "    \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "instance =  ConvertTRF(path_to_tif= r\"D:\\git\\flood_exercise\\S2\" ,\n",
+    "                       path_save_trf= r\"D:\\git\\flood_exercise\\RESULTS\\trfRecords\")\n",
+    "\n",
+    "# instance.list_of_tif"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,215 +132,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "B1_list = tf.train.FloatList(value=df['B1'].tolist())\n",
     "B1_vals = tf.train.Feature(float_list=B1_list)\n",
-    "# B1_names = tf.train.Feature(bytes_list=B1_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "B1_vals"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# movie_name_list = tf.train.BytesList(value=['The Shawshank Redemption', 'Fight Club'])\n",
-    "movie_rating_list = tf.train.FloatList(value=df['B1'].tolist())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "movie_ratings = tf.train.Feature(float_list=movie_rating_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "movie_ratings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import tensorflow as tf\n",
-    "import numpy as np\n",
-    "import rasterio\n",
-    "\n",
-    "def _bytes_feature(value):\n",
-    "    return tf.train.Feature(bytes_list=tf.train.BytesList(value=[value]))\n",
-    "\n",
-    "def _int64_feature(value):\n",
-    "    return tf.train.Feature(int64_list=tf.train.Int64List(value=value.flatten()))\n",
-    "\n",
-    "def read_geotiff(file_path):\n",
-    "    with rasterio.open(file_path) as src:\n",
-    "        return src.read()\n",
-    "\n",
-    "def convert_to_tfrecord(image_dir, output_file):\n",
-    "    writer = tf.io.TFRecordWriter(output_file)\n",
-    "    image_files = os.listdir(image_dir)\n",
     "\n",
     "\n",
-    "    for img_file, label_file in image_files:\n",
-    "        img_path = os.path.join(image_dir, img_file)\n",
+    "B2_list = tf.train.FloatList(value=df['B2'].tolist())\n",
+    "B2_vals = tf.train.Feature(float_list=B2_list)\n",
     "\n",
-    "\n",
-    "        image = read_geotiff(img_path)  \n",
-    "\n",
-    "        image_bytes = image.tobytes()\n",
-    "\n",
-    "\n",
-    "        example = tf.train.Example(features=tf.train.Features(feature={\n",
-    "            'image': _bytes_feature(image_bytes),\n",
-    "        }))\n",
-    "\n",
-    "        writer.write(example.SerializeToString())\n",
-    "\n",
-    "    writer.close()\n",
-    "\n",
-    "# Example usage:\n",
-    "image_dir = r'D:\\git\\flood_exercise\\S2\\Bolivia_23014_S2Hand.tif'\n",
-    "output_file = 'dataset.tfrecord'\n",
-    "\n",
-    "convert_to_tfrecord(image_dir,output_file)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    " image_files = os.listdir(\"D:\\git\\flood_exercise\\S2\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "paths = util.load_list_paths(path = r'D:\\git\\flood_exercise\\S2', filter_file =True)\n",
-    "\n",
-    "src = rasterio.open(paths[15])\n",
-    "arr = src.read(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def _bytes_feature(value):\n",
-    "    return tf.train.Feature(bytes_list=tf.train.BytesList(value=[value]))\n",
-    "\n",
-    "def _int64_feature(value):\n",
-    "    return tf.train.Feature(int64_list=tf.train.Int64List(value=value.flatten()))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "arr_bytes = arr.tobytes()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "example = tf.train.Example(features=tf.train.Features(feature={\n",
-    "            'image': _bytes_feature(arr_bytes),\n",
-    "        }))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "example"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset = tf.data.TFRecordDataset(\"D:\\git\\flood_exercise\\S2\\Bolivia_23014_S2Hand.tif\")\n",
-    "\n",
-    "featuresDict = {\n",
-    "  'B1' : tf.io.FixedLenFeature(shape=[1], dtype=tf.float32),\n",
-    "  'B2': tf.io.FixedLenFeature(shape=[1], dtype=tf.float32),\n",
-    "  'B3': tf.io.FixedLenFeature(shape=[1], dtype=tf.float32),\n",
-    "  'B4': tf.io.FixedLenFeature(shape=[1], dtype=tf.float32),\n",
-    "  'B5': tf.io.FixedLenFeature(shape=[1], dtype=tf.float32),\n",
-    "  'B6': tf.io.FixedLenFeature(shape=[1], dtype=tf.float32),\n",
-    "  'B7': tf.io.FixedLenFeature(shape=[1], dtype=tf.float32),\n",
-    "  'B8': tf.io.FixedLenFeature(shape=[1], dtype=tf.float32),\n",
-    "  'B8A': tf.io.FixedLenFeature(shape=[1], dtype=tf.float32),\n",
-    "  'B9': tf.io.FixedLenFeature(shape=[1], dtype=tf.float32),\n",
-    "  'B10': tf.io.FixedLenFeature(shape=[1], dtype=tf.float32),\n",
-    "  'B11': tf.io.FixedLenFeature(shape=[1], dtype=tf.float32),\n",
-    "  'B12': tf.io.FixedLenFeature(shape=[1], dtype=tf.float32),\n",
+    "bands_dict = {\n",
+    "  'B1': B1_vals ,\n",
+    "  'B2': B2_vals \n",
     "}\n",
     "\n",
     "\n",
-    "parsedDataset = dataset.map(lambda example: tf.io.parse_single_example(example, featuresDict))\n"
+    "bands_data = tf.train.Features(feature=bands_dict)\n",
+    "\n",
+    "\n",
+    "\n",
+    "example = tf.train.Example(features=bands_data)\n",
+    "\n",
+    "\n",
+    "with tf.io.TFRecordWriter(r'D:\\git\\flood_exercise\\RESULTS\\trfRecords\\test.tfrecord') as tfrecord_writer:\n",
+    "  tfrecord_writer.write(example.SerializeToString())\n",
+    "# # \"example\" is of type tf.train.Example.\n",
+    "# with tf.python_io.TFRecordWriter(r'D:\\git\\flood_exercise\\RESULTS\\trfRecords\\test.tfrecord') as writer:\n",
+    "#   writer.write(example.SerializeToString())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensorflow.core.example.feature_pb2.Features"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "parsedDataset"
+    "type(bands_data)"
    ]
   },
   {
