--- a/nbs/05TFRecord.ipynb
+++ b/nbs/05TFRecord.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,8 +77,10 @@
     "    path_save_trf : str , # path to the folder that will store the result trf Records files\n",
     "    ):\n",
     "\n",
-    "    self.list_of_tif = util.load_list_paths(path = path_to_tif , filter_file = False)\n",
+    "    self.list_of_tif = util.load_list_paths(path = path_to_tif , filter_file = False)[0]\n",
     "\n",
+    "    self._convert_img_to_feature_(path_to_img = self.list_of_tif)\n",
+    "    \n",
     "\n",
     "\n",
     "  def _convert_img_to_feature_(self, \n",
@@ -92,27 +94,38 @@
     "      # convert to dataframe in order to convert later to feature #TODO - MAKE IT OWKRS WITH NUMPY ARRAY\n",
     "      df = pd.DataFrame(arr.reshape([arr.shape[0],-1]).T)\n",
     "      df.columns = bands\n",
-    "      \n",
-    "      \n",
     "\n",
+    "      # self.bands_dict = {key: None for key in bands}\n",
+    "      bands_dict = {}\n",
+    "      for b in bands:\n",
+    "        band_list = tf.train.FloatList(value=df[b].tolist())\n",
+    "        band_vals = tf.train.Feature(float_list=band_list)\n",
+    "        self.bands_dict[b] = band_vals\n",
+    "\n",
+    "      bands_data = tf.train.Features(feature=bands_dict)\n",
+    "      \n",
     "    \n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['B1', 'B2', 'B3', 'B4', 'B5', 'B6', 'B7', 'B8', 'B8A', 'B9', 'B10', 'B11', 'B12'])\n"
+     ]
+    }
+   ],
    "source": [
     "instance =  ConvertTRF(path_to_tif= r\"D:\\git\\flood_exercise\\S2\" ,\n",
     "                       path_save_trf= r\"D:\\git\\flood_exercise\\RESULTS\\trfRecords\")\n",
     "\n",
-    "# instance.list_of_tif"
+    "instance.bands_dict\n"
    ]
   },
   {
