testing on one file trfrecord files

--- a/nbs/01CONSTANTS.ipynb
+++ b/nbs/01CONSTANTS.ipynb
@@ -45,6 +45,8 @@
     "\n",
     "SPLIT_TILES_NAMES_STR2 = '_'\n",
     "SPLIT_TILES_NAMES_STR1 = \"\\\\\"\n",
+    "SPLIT_TILES_NAMES_STR3 = \".tif\"\n",
+    "\n",
     "\n",
     "REGION_STR ='region'\n",
     "PATH_STR = 'path'\n",
@@ -60,13 +62,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "#|export\n",
     "# task 3 constants\n",
-    "\n"
+    "\n",
+    "TRF_FILE_SUFFIX = '.tfrecord'"
    ]
   },
   {
