--- a/nbs/05TFRecord.ipynb
+++ b/nbs/05TFRecord.ipynb
@@ -78,7 +78,7 @@
     "    ):\n",
     "\n",
     "    self.list_of_tif = util.load_list_paths(path = path_to_tif , filter_file = False)[0]\n",
-    "\n",
+    "    self.path_save_trf = path_save_trf\n",
     "    self._convert_img_to_feature_(path_to_img = self.list_of_tif)\n",
     "    \n",
     "\n",
@@ -87,6 +87,8 @@
     "                               path_to_img : str , #path to specific image\n",
     "                               ):\n",
     "    with rasterio.open(path_to_img) as src:\n",
+    "\n",
+    "      file_name = path_to_img.split(CONST.SPLIT_TILES_NAMES_STR1)[-1].split(CONST.SPLIT_TILES_NAMES_STR3)[0]\n",
     "\n",
     "      bands = src.descriptions\n",
     "      arr = src.read()\n",
@@ -104,8 +106,10 @@
     "\n",
     "      bands_data = tf.train.Features(feature=bands_dict)\n",
     "      \n",
-    "    \n",
-    "\n"
+    "      example = tf.train.Example(features=bands_data)\n",
+    "      \n",
+    "      with tf.io.TFRecordWriter(self.path_save_trf + CONST.SPLIT_TILES_NAMES_STR1+file_name + CONST.TRF_FILE_SUFFIX) as tfrecord_writer:\n",
+    "        tfrecord_writer.write(example.SerializeToString())\n"
    ]
   },
   {
@@ -126,6 +130,25 @@
     "                       path_save_trf= r\"D:\\git\\flood_exercise\\RESULTS\\trfRecords\")\n",
     "\n",
     "instance.bands_dict\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unterminated string literal (detected at line 2) (282805630.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[37], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    stringi.split(\"\\\")\u001b[0m\n\u001b[1;37m                  ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unterminated string literal (detected at line 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "stringi = \"\\git\\flood_exercise\\S2\\Bolivia_23014_S2Hand.tif\"\n",
+    "stringi.split(\"\\\")"
    ]
   },
   {
