added .tfrecord in git ignore

--- a/nbs/05TFRecord.ipynb
+++ b/nbs/05TFRecord.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,9 +44,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From d:\\git\\flood_exercise\\.venv\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "#|export\n",
     "import tensorflow as tf\n",
@@ -62,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,9 +86,11 @@
     "    path_save_trf : str , # path to the folder that will store the result trf Records files\n",
     "    ):\n",
     "\n",
-    "    self.list_of_tif = util.load_list_paths(path = path_to_tif , filter_file = False)[0]\n",
+    "    self.list_of_tif = util.load_list_paths(path = path_to_tif , filter_file = False)\n",
     "    self.path_save_trf = path_save_trf\n",
-    "    self._convert_img_to_feature_(path_to_img = self.list_of_tif)\n",
+    "\n",
+    "    for tif in self.list_of_tif:\n",
+    "      self._convert_img_to_feature_(path_to_img = tif)\n",
     "    \n",
     "\n",
     "\n",
@@ -102,26 +113,34 @@
     "      for b in bands:\n",
     "        band_list = tf.train.FloatList(value=df[b].tolist())\n",
     "        band_vals = tf.train.Feature(float_list=band_list)\n",
-    "        self.bands_dict[b] = band_vals\n",
+    "        bands_dict[b] = band_vals\n",
     "\n",
     "      bands_data = tf.train.Features(feature=bands_dict)\n",
     "      \n",
     "      example = tf.train.Example(features=bands_data)\n",
     "      \n",
     "      with tf.io.TFRecordWriter(self.path_save_trf + CONST.SPLIT_TILES_NAMES_STR1+file_name + CONST.TRF_FILE_SUFFIX) as tfrecord_writer:\n",
-    "        tfrecord_writer.write(example.SerializeToString())\n"
+    "        tfrecord_writer.write(example.SerializeToString())\n",
+    "\n",
+    "        print(f'saved tfrecord at :  {self.path_save_trf + CONST.SPLIT_TILES_NAMES_STR1+file_name + CONST.TRF_FILE_SUFFIX}')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dict_keys(['B1', 'B2', 'B3', 'B4', 'B5', 'B6', 'B7', 'B8', 'B8A', 'B9', 'B10', 'B11', 'B12'])\n"
+     "ename": "AttributeError",
+     "evalue": "'ConvertTRF' object has no attribute 'bands_dict'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[12], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m instance \u001b[38;5;241m=\u001b[39m  \u001b[43mConvertTRF\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpath_to_tif\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mD:\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mgit\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mflood_exercise\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mS2\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m      2\u001b[0m \u001b[43m                       \u001b[49m\u001b[43mpath_save_trf\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mD:\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mgit\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mflood_exercise\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mRESULTS\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mtrfRecords\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[11], line 16\u001b[0m, in \u001b[0;36mConvertTRF.__init__\u001b[1;34m(self, path_to_tif, path_save_trf)\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpath_save_trf \u001b[38;5;241m=\u001b[39m path_save_trf\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m tif \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlist_of_tif:\n\u001b[1;32m---> 16\u001b[0m   \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_convert_img_to_feature_\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpath_to_img\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mtif\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[11], line 39\u001b[0m, in \u001b[0;36mConvertTRF._convert_img_to_feature_\u001b[1;34m(self, path_to_img)\u001b[0m\n\u001b[0;32m     37\u001b[0m   band_list \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mtrain\u001b[38;5;241m.\u001b[39mFloatList(value\u001b[38;5;241m=\u001b[39mdf[b]\u001b[38;5;241m.\u001b[39mtolist())\n\u001b[0;32m     38\u001b[0m   band_vals \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mtrain\u001b[38;5;241m.\u001b[39mFeature(float_list\u001b[38;5;241m=\u001b[39mband_list)\n\u001b[1;32m---> 39\u001b[0m   \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbands_dict\u001b[49m[b] \u001b[38;5;241m=\u001b[39m band_vals\n\u001b[0;32m     41\u001b[0m bands_data \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mtrain\u001b[38;5;241m.\u001b[39mFeatures(feature\u001b[38;5;241m=\u001b[39mbands_dict)\n\u001b[0;32m     43\u001b[0m example \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mtrain\u001b[38;5;241m.\u001b[39mExample(features\u001b[38;5;241m=\u001b[39mbands_data)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'ConvertTRF' object has no attribute 'bands_dict'"
      ]
     }
    ],
@@ -129,23 +148,14 @@
     "instance =  ConvertTRF(path_to_tif= r\"D:\\git\\flood_exercise\\S2\" ,\n",
     "                       path_save_trf= r\"D:\\git\\flood_exercise\\RESULTS\\trfRecords\")\n",
     "\n",
-    "instance.bands_dict\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "unterminated string literal (detected at line 2) (282805630.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[37], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    stringi.split(\"\\\")\u001b[0m\n\u001b[1;37m                  ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unterminated string literal (detected at line 2)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "stringi = \"\\git\\flood_exercise\\S2\\Bolivia_23014_S2Hand.tif\"\n",
     "stringi.split(\"\\\")"
@@ -153,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,20 +211,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensorflow.core.example.feature_pb2.Features"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "type(bands_data)"
    ]
