remove tfrecord from git

--- a/nbs/05TFRecord.ipynb
+++ b/nbs/05TFRecord.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,20 +127,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'ConvertTRF' object has no attribute 'bands_dict'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[12], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m instance \u001b[38;5;241m=\u001b[39m  \u001b[43mConvertTRF\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpath_to_tif\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mD:\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mgit\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mflood_exercise\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mS2\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m      2\u001b[0m \u001b[43m                       \u001b[49m\u001b[43mpath_save_trf\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mD:\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mgit\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mflood_exercise\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mRESULTS\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mtrfRecords\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[11], line 16\u001b[0m, in \u001b[0;36mConvertTRF.__init__\u001b[1;34m(self, path_to_tif, path_save_trf)\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpath_save_trf \u001b[38;5;241m=\u001b[39m path_save_trf\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m tif \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlist_of_tif:\n\u001b[1;32m---> 16\u001b[0m   \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_convert_img_to_feature_\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpath_to_img\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mtif\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[11], line 39\u001b[0m, in \u001b[0;36mConvertTRF._convert_img_to_feature_\u001b[1;34m(self, path_to_img)\u001b[0m\n\u001b[0;32m     37\u001b[0m   band_list \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mtrain\u001b[38;5;241m.\u001b[39mFloatList(value\u001b[38;5;241m=\u001b[39mdf[b]\u001b[38;5;241m.\u001b[39mtolist())\n\u001b[0;32m     38\u001b[0m   band_vals \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mtrain\u001b[38;5;241m.\u001b[39mFeature(float_list\u001b[38;5;241m=\u001b[39mband_list)\n\u001b[1;32m---> 39\u001b[0m   \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbands_dict\u001b[49m[b] \u001b[38;5;241m=\u001b[39m band_vals\n\u001b[0;32m     41\u001b[0m bands_data \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mtrain\u001b[38;5;241m.\u001b[39mFeatures(feature\u001b[38;5;241m=\u001b[39mbands_dict)\n\u001b[0;32m     43\u001b[0m example \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mtrain\u001b[38;5;241m.\u001b[39mExample(features\u001b[38;5;241m=\u001b[39mbands_data)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'ConvertTRF' object has no attribute 'bands_dict'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "saved tfrecord at :  D:\\git\\flood_exercise\\RESULTS\\trfRecords\\Nigeria_417184_S2Hand.tfrecord\n",
+      "saved tfrecord at :  D:\\git\\flood_exercise\\RESULTS\\trfRecords\\Mekong_1396181_S2Hand.tfrecord\n",
+      "saved tfrecord at :  D:\\git\\flood_exercise\\RESULTS\\trfRecords\\Mekong_1191208_S2Hand.tfrecord\n",
+      "saved tfrecord at :  D:\\git\\flood_exercise\\RESULTS\\trfRecords\\Mekong_1248200_S2Hand.tfrecord\n",
+      "saved tfrecord at :  D:\\git\\flood_exercise\\RESULTS\\trfRecords\\India_900498_S2Hand.tfrecord\n",
+      "saved tfrecord at :  D:\\git\\flood_exercise\\RESULTS\\trfRecords\\Mekong_1149855_S2Hand.tfrecord\n",
+      "saved tfrecord at :  D:\\git\\flood_exercise\\RESULTS\\trfRecords\\India_91379_S2Hand.tfrecord\n",
+      "saved tfrecord at :  D:\\git\\flood_exercise\\RESULTS\\trfRecords\\India_943439_S2Hand.tfrecord\n",
+      "saved tfrecord at :  D:\\git\\flood_exercise\\RESULTS\\trfRecords\\Nigeria_952958_S2Hand.tfrecord\n",
+      "saved tfrecord at :  D:\\git\\flood_exercise\\RESULTS\\trfRecords\\Mekong_293769_S2Hand.tfrecord\n",
+      "saved tfrecord at :  D:\\git\\flood_exercise\\RESULTS\\trfRecords\\Nigeria_22088_S2Hand.tfrecord\n",
+      "saved tfrecord at :  D:\\git\\flood_exercise\\RESULTS\\trfRecords\\Nigeria_1095404_S2Hand.tfrecord\n",
+      "saved tfrecord at :  D:\\git\\flood_exercise\\RESULTS\\trfRecords\\Mekong_342411_S2Hand.tfrecord\n",
+      "saved tfrecord at :  D:\\git\\flood_exercise\\RESULTS\\trfRecords\\Nigeria_812045_S2Hand.tfrecord\n",
+      "saved tfrecord at :  D:\\git\\flood_exercise\\RESULTS\\trfRecords\\Mekong_922373_S2Hand.tfrecord\n",
+      "saved tfrecord at :  D:\\git\\flood_exercise\\RESULTS\\trfRecords\\Mekong_45934_S2Hand.tfrecord\n",
+      "saved tfrecord at :  D:\\git\\flood_exercise\\RESULTS\\trfRecords\\Mekong_382276_S2Hand.tfrecord\n",
+      "saved tfrecord at :  D:\\git\\flood_exercise\\RESULTS\\trfRecords\\Mekong_846007_S2Hand.tfrecord\n",
+      "saved tfrecord at :  D:\\git\\flood_exercise\\RESULTS\\trfRecords\\Mekong_424793_S2Hand.tfrecord\n",
+      "saved tfrecord at :  D:\\git\\flood_exercise\\RESULTS\\trfRecords\\Mekong_98310_S2Hand.tfrecord\n",
+      "saved tfrecord at :  D:\\git\\flood_exercise\\RESULTS\\trfRecords\\Nigeria_225131_S2Hand.tfrecord\n",
+      "saved tfrecord at :  D:\\git\\flood_exercise\\RESULTS\\trfRecords\\Mekong_221789_S2Hand.tfrecord\n",
+      "saved tfrecord at :  D:\\git\\flood_exercise\\RESULTS\\trfRecords\\Pakistan_132143_S2Hand.tfrecord\n"
      ]
     }
    ],
@@ -150,80 +166,6 @@
     "\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "stringi = \"\\git\\flood_exercise\\S2\\Bolivia_23014_S2Hand.tif\"\n",
-    "stringi.split(\"\\\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# playing\n",
-    "src = rasterio.open(r'D:\\git\\flood_exercise\\S2\\Bolivia_23014_S2Hand.tif')\n",
-    "bands = src.descriptions\n",
-    "arr = src.read()\n",
-    "\n",
-    "df = pd.DataFrame(arr.reshape([arr.shape[0],-1]).T)\n",
-    "df.columns = bands"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "B1_list = tf.train.FloatList(value=df['B1'].tolist())\n",
-    "B1_vals = tf.train.Feature(float_list=B1_list)\n",
-    "\n",
-    "\n",
-    "B2_list = tf.train.FloatList(value=df['B2'].tolist())\n",
-    "B2_vals = tf.train.Feature(float_list=B2_list)\n",
-    "\n",
-    "bands_dict = {\n",
-    "  'B1': B1_vals ,\n",
-    "  'B2': B2_vals \n",
-    "}\n",
-    "\n",
-    "\n",
-    "bands_data = tf.train.Features(feature=bands_dict)\n",
-    "\n",
-    "\n",
-    "\n",
-    "example = tf.train.Example(features=bands_data)\n",
-    "\n",
-    "\n",
-    "with tf.io.TFRecordWriter(r'D:\\git\\flood_exercise\\RESULTS\\trfRecords\\test.tfrecord') as tfrecord_writer:\n",
-    "  tfrecord_writer.write(example.SerializeToString())\n",
-    "# # \"example\" is of type tf.train.Example.\n",
-    "# with tf.python_io.TFRecordWriter(r'D:\\git\\flood_exercise\\RESULTS\\trfRecords\\test.tfrecord') as writer:\n",
-    "#   writer.write(example.SerializeToString())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "type(bands_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
