adding spectral indices to ml

--- a/nbs/01CONSTANTS.ipynb
+++ b/nbs/01CONSTANTS.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,10 @@
     "# task 4 constants\n",
     "GREEN_BAND =3\n",
     "NIR_BAND = 8\n",
+    "RED_BAND = 4\n",
     "\n",
+    "NDVI_STR = 'ndvi'\n",
+    "NDWI_STR = 'ndwi'\n",
     "# names for water percentage columns\n",
     "\n",
     "IMG_PATH_WATER_STR = 'img_path'\n",
