--- a/nbs/06train_ml.ipynb
+++ b/nbs/06train_ml.ipynb
@@ -106,7 +106,9 @@
     "\n",
     "\n",
     "    #collect pixels into dataframe \n",
-    "    self.df_res = self._collect_pixels_to_dataframe_()\n",
+    "    self.df = self._collect_pixels_to_dataframe_()\n",
+    "\n",
+    "    self.df_res = self._add_spectral_inidices(self.df)\n",
     "\n",
     "    # split into train and test data for ML model\n",
     "    self.x_train, self.x_test, self.y_train, self.y_test=self._prepare_dataframe_for_train_()\n",
@@ -148,6 +150,13 @@
     "\n",
     "      return df_res\n",
     "    \n",
+    "  def _add_spectral_inidices(self , \n",
+    "                             df : pd.DataFrame , #dataframe with sentinel -2 data\n",
+    "                             ):\n",
+    "    df[CONST.NDVI_STR] = (df[CONST.NIR_BAND] - df[CONST.RED_BAND]) / (df[CONST.NIR_BAND] + df[CONST.RED_BAND])\n",
+    "    df[CONST.NDWI_STR] = (df[CONST.GREEN_BAND] - df[CONST.NIR_BAND]) / (df[CONST.GREEN_BAND] + df[CONST.NIR_BAND])\n",
+    "\n",
+    "    return df\n",
     "  \n",
     "  def _prepare_dataframe_for_train_(self):\n",
     "    \n",
@@ -168,6 +177,8 @@
     "    # add 1 to class column , as it has -1 values \n",
     "\n",
     "    self.df_res[self.target_col] = self.df_res[self.target_col] + 1\n",
+    "\n",
+    "\n",
     "\n",
     "    x = self.df_res.drop(self.target_col,axis=1)\n",
     "    y = self.df_res[self.target_col].values\n",
