Ready to test ML with spectral indices

--- a/nbs/01CONSTANTS.ipynb
+++ b/nbs/01CONSTANTS.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,12 @@
     "#     \"max_deth\" : [4, 6, 10],\n",
     "#     \"alpha\":[0,0.01, 0.1, 0.5],\n",
     "#     \"learning_rate\":[0.01, 0.1, 0.5, 1],\n",
-    "#     }"
+    "#     }\n",
+    "\n",
+    "# task 4 constants\n",
+    "GREEN_BAND_NAME ='B3'\n",
+    "NIR_BAND_NAME = 'B8'\n",
+    "RED_BAND_NAME = 'B4'"
    ]
   },
   {
